# vision-language-captioner

./: README.md  docker-compose.yml  pytest.ini  requirements-test.txt
.github/workflows/: deploy.yml
inference/: caption_generator.py  main.py  model_registry.py  preprocessing.py  pyproject.toml
tests/: __init__.py  conftest.py  test_config.py  test_dataset.py  test_decoder.py  test_experiment_tracking.py  test_integration.py  test_performance.py  test_tokenizer.py
training/: Dockerfile  README.md  config.kaggle.yaml  kaggle_utils.py  resume_training.py  train.py
training/callbacks/: metrics.py
training/data/: __init__.py  caption_loader.py  dataset.py
training/features/: base.py
training/models/: caption_model.py
training/trainers/: trainer.py
training/utils/: __init__.py  experiment_tracking.py  mixed_precision.py  model_versioning.py
